# LudumDare38

./: .gitignore  CMakeLists.txt  win-release-build.bat
src/: config.hpp.in  main.cpp
src/core/: animation.cpp  animation.hpp  parseutils.hpp  particles.cpp  particles.hpp  vfs.cpp  vfs.hpp  window.hpp
src/core/renderer/: batch.cpp  batch.hpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  texture.cpp
src/game/: game.cpp  game.hpp
